<resources>
    <string name="app_name">BusinessCard</string>
    <string name="label_business_cards">Cartão de Visitas</string>
    <string name="label_descrytion_new_card">Novo Cartão</string>
    <string name="label_name">Nome</string>
    <string name="label_fone">Telefone</string>
    <string name="label_email">Email</string>
    <string name="label_empresa">empresa</string>
    <string name="label_cor">cor</string>
    <string name="label_salvar">Salvar</string>
    <string name="label_show_sucess">Cartao Cadastrado de Sucesso</string>
</resources>